<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="adapter"
            type="com.estyle.teabaike.adapter.CollectionAdapter" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_collection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CollectionActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/my_collection"
                    android:textColor="@color/tea_theme"
                    android:textSize="@dimen/titlebar_title_size" />

                <Button
                    android:id="@+id/check_all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:onClick="checkAll"
                    android:text="@string/check_all"
                    android:textColor="@color/tea_theme"
                    android:visibility="invisible" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_nothing" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            app:adapter="@{adapter}"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:onClick="deleteItem"
            android:src="@drawable/ic_clear"
            android:visibility="invisible" />

    </RelativeLayout>

</layout>